fixed footer spacing

--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -1,6 +1,13 @@
 .footer {
     padding: 0 6rem;
     background: #343a40;
+
+    @media only screen and (max-width: 600px) {
+        padding: 0rem 4rem;
+    }
+    @media only screen and (max-width: 450px) {
+        padding: 0rem 3rem;
+    }
 }
 
 .footer-container {
@@ -18,6 +25,10 @@
         height: 64rem;
         grid-gap: 2rem;
         padding: 4rem 0rem;
+    }
+
+    @media only screen and (max-width: 450px) {
+        grid-gap: 1rem;
     }
 
     h1 {
